@@ -1,3 +1,12 @@
+3rd September 2009 - Revision 135 - Euan Freeman
+  - Fixed problem when creating a 'New Config', where the colour buttons were defaulting to #000000 rather than the default 'fgColor'
+  
+  - Grouped all the related 'Task' tabs under a new notebook
+  
+  - Added support for 'task_icon_hsb', 'task_active_icon_hsb' and 'taskbar_active_background_id'
+  
+  - Added support for 'maximize_restore' mouse action (see tint2 r156)
+
 30th August 2009 - Revision 130 - Euan Freeman
   - Removed "single_monitor" option from "taskbar_mode"
   
